Set JVM options for forked integration tests
Change-Id: I9e9720238172c0c64b0addd30e315dc4723956ac